--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "oxy-quiz-game-1",
+  "name": "oxy-quiz-game-2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,10 +14,12 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "framer-motion": "^12.0.5",
     "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-app-rewired": "^2.2.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-confetti": "^6.2.2",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
