--- a/package.json
+++ b/package.json
@@ -55,5 +55,5 @@
     "@babel/core": "^7.26.0",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   },
-  "homepage": "."
+  "homepage": "https://wasimakram516.github.io/oxy-quiz-game-2"
 }
